--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,24 @@
 AllCops:
   TargetRubyVersion: 2.3
+  Exclude:
+    - db/**/*
+    - config/**/*
+    - bin/*
+    - vendor/**/*
+Rails:
+  Enabled: true
 
 Style/DoubleNegation:
   Enabled: false
 
 Metrics/AbcSize:
   Enabled: false
+
+Style/AsciiComments:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Metrics/LineLength:
+  Max: 110
